// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/spin/demo/basic.md correctly 1`] = `
<div>
  <div class="ant-spin ant-spin-spinning ant-spin-show-text"><span class="ant-spin-dot"><i></i><i></i><i></i><i></i></span></div>
</div>
`;

exports[`renders ./components/spin/demo/custom-indicator.md correctly 1`] = `
<div>
  <div class="ant-spin ant-spin-spinning ant-spin-show-text">
    <i class="anticon anticon-loading anticon-spin" style="font-size: 24px;"></i>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/delayAndDebounce.md correctly 1`] = `
<div>
  <!---->
  Loading state：<span tabindex="0" class="ant-switch"><span class="ant-switch-inner"></span></span>
</div>
`;

exports[`renders ./components/spin/demo/inside.md correctly 1`] = `
<div class="example">
  <div class="ant-spin ant-spin-spinning ant-spin-show-text"><span class="ant-spin-dot"><i></i><i></i><i></i><i></i></span></div>
</div>
`;

exports[`renders ./components/spin/demo/nested.md correctly 1`] = `
<div>
  <!---->
  Loading state：<span tabindex="0" class="ant-switch"><span class="ant-switch-inner"></span></span>
</div>
`;

exports[`renders ./components/spin/demo/size.md correctly 1`] = `
<div>
  <div class="ant-spin ant-spin-sm ant-spin-spinning ant-spin-show-text"><span class="ant-spin-dot"><i></i><i></i><i></i><i></i></span></div>
  <div class="ant-spin ant-spin-spinning ant-spin-show-text"><span class="ant-spin-dot"><i></i><i></i><i></i><i></i></span></div>
  <div class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text"><span class="ant-spin-dot"><i></i><i></i><i></i><i></i></span></div>
</div>
`;

exports[`renders ./components/spin/demo/tip.md correctly 1`] = `
<div>
  <!---->
</div>
`;
